# simple_pdf_rag

./: .env_example  .gitignore  README.md  app.py  chat_with_your_pdf.py  pyproject.toml  requirements.txt
